src/objects/ints__TransUnion_Credit_Report__c.object
<CustomObject>
    <fields>
        <fullName>ints__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>TransUnion Credit Reports</relationshipLabel>
        <relationshipName>TransUnion_Credit_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ints__DOB__c</fullName>
        <label>DOB</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__File__c</fullName>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__FirstName__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__LastName__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__OnFileDate__c</fullName>
        <label>On File Date</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__SIN__c</fullName>
        <label>SIN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>TransUnion Credit Report</label>
    <nameField>
        <displayFormat>TUCR-{000000000}</displayFormat>
        <label>TransUnion Credit Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TransUnion Credit Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>